--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="">
-							<source media="(min-width: 768px)" srcset="">
-							<img class="artist-details__img" src="" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="img/catalog/monet-desktop.jpg">
+							<source media="(min-width: 768px)" srcset="img/catalog/monet-tablet.jpg">
+							<img class="artist-details__img" src="img/catalog/monet-mobile.jpg" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset"></h3>
+						<h3 class="artist-details__heading text-block-reset">Клод Моне</h3>
 						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
 						</p>
@@ -323,11 +323,11 @@
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="">
-							<source media="(min-width: 768px)" srcset="">
-							<img class="artist-details__img" src="" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="img/catalog/durer-desktop.jpg">
+							<source media="(min-width: 768px)" srcset="img/catalog/durer-tablet.jpg">
+							<img class="artist-details__img" src="img/catalog/durer-mobile.jpg" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset"></h3>
+						<h3 class="artist-details__heading text-block-reset">Альбрехт Дюрер</h3>
 						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
 						</p>
@@ -377,30 +377,9 @@
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бенедетто ди Биндо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бергоньоне, Амброджо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Биссоло, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Больтраффио, Джованни</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бонсиньори, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Боттичини, Рафаэлло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Брамантино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бреа, Людовико</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бьяджо д’Антонио Туччи</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Веккьетта</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Андреа Верроккьо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Доменико Гирландайо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Беноццо Гоццоли</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Граначчи, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Грегорио ди Чекко</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни да Удине</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни ди Паоло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джорджоне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Парентино, Бернардо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пезеллино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пьетро Перуджино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Перуцци, Бальдассаре</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пизанелло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пинтуриккьо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="gabbiani">Антон Доменико Габбиани</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="maratta">Карло Маратта</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="pellegrini">Джованни Антонио Пеллегрини</a></li>
 							</ul>
 						</div>
 						<div class="artists-catalog__subsection">
@@ -540,11 +519,11 @@
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="">
-							<source media="(min-width: 768px)" srcset="">
-							<img class="artist-details__img" src="" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="img/catalog/aivazovsky-desktop.jpg">
+							<source media="(min-width: 768px)" srcset="img/catalog/aivazovsky-tablet.jpg">
+							<img class="artist-details__img" src="img/catalog/aivazovsky-mobile.jpg" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset"></h3>
+						<h3 class="artist-details__heading text-block-reset">Иван Айвазовский</h3>
 						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
 						</p>
@@ -564,11 +543,11 @@
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="">
-							<source media="(min-width: 768px)" srcset="">
-							<img class="artist-details__img" src="" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="img/catalog/magritte-desktop.jpg">
+							<source media="(min-width: 768px)" srcset="img/catalog/magritte-tablet.jpg">
+							<img class="artist-details__img" src="img/catalog/magritte-mobile.jpg" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset"></h3>
+						<h3 class="artist-details__heading text-block-reset">Рене Магритт</h3>
 						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
 						</p>
@@ -669,72 +648,66 @@
 				<form class="publications-form" action="#">
 					<fieldset class="categories-fieldset">
 						<legend class="categories-fieldset__legend">Категории</legend>
-						<div class="categories-fieldset__column">
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Бестселлеры
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Искусство
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Архитектура
-							</label>
-							<label class="categories-fieldset__checkbox checkbox active">
-								<input class="checkbox__input" type="checkbox" checked>
-								<span class="checkbox__box"></span>
-								Дизайн
-							</label>
-						</div>
-						<div class="categories-fieldset__column">
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Мода
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Детям
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Художественная литература
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Публицистика
-							</label>
-						</div>
-						<div class="categories-fieldset__column">
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Путеводители
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Философия
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Учебная литература
-							</label>
-							<label class="categories-fieldset__checkbox checkbox">
-								<input class="checkbox__input" type="checkbox">
-								<span class="checkbox__box"></span>
-								Журналы и газеты
-							</label>
-						</div>
+						<label class="categories-fieldset__checkbox checkbox" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Бестселлеры
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Искусство
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Архитектура
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset active" tabindex=0>
+							<input class="checkbox__input" type="checkbox" checked>
+							<span class="checkbox__box"></span>
+							Дизайн
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Мода
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Детям
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Художественная литература
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Публицистика
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Путеводители
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Философия
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Учебная литература
+						</label>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Журналы и газеты
+						</label>
 					</fieldset>
 					<fieldset class="price-fieldset">
 						<legend class="price-fieldset__legend">Цена</legend>
@@ -751,7 +724,6 @@
 					<div class="swiper-button-next publications-swiper__button-next pagination__button selectable link-reset"></div>
 				</div>
 				<div class="swiper-container publications-swiper">
-
 					<div class="swiper-wrapper publications-swiper__wrapper">
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -760,11 +732,11 @@
 								<img class="publication-card__img" src="img/publications/1-mobile.jpg" alt="Искусство цвета">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Искусство цвета</h4>
+								<h3 class="publication-card__heading text-block-reset">Искусство цвета</h3>
 								<p class="publication-card__author text-block-reset">Иттен, Иоханнес</p>
 								<p class="publication-card__price text-block-reset">620 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -773,11 +745,11 @@
 								<img class="publication-card__img" src="img/publications/2-mobile.jpg" alt="Типографика">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Типографика</h4>
+								<h3 class="publication-card__heading text-block-reset">Типографика</h3>
 								<p class="publication-card__author text-block-reset">Рудер, Эмиль</p>
 								<p class="publication-card__price text-block-reset">2 450 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -786,11 +758,11 @@
 								<img class="publication-card__img" src="img/publications/3-mobile.jpg" alt="Книга про буквы">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Книга про буквы</h4>
+								<h3 class="publication-card__heading text-block-reset">Книга про буквы</h3>
 								<p class="publication-card__author text-block-reset">Гордон, Юрий</p>
 								<p class="publication-card__price text-block-reset">2 200 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -799,11 +771,11 @@
 								<img class="publication-card__img" src="img/publications/4-mobile.jpg" alt="Николай Ильин">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Николай Ильин</h4>
+								<h3 class="publication-card__heading text-block-reset">Николай Ильин</h3>
 								<p class="publication-card__author text-block-reset">Кричевский, Влади...</p>
 								<p class="publication-card__price text-block-reset">1 100 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -812,11 +784,11 @@
 								<img class="publication-card__img" src="img/publications/5-mobile.jpg" alt="Модульные сетки">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Модульные сетки...</h4>
+								<h3 class="publication-card__heading text-block-reset">Модульные сетки...</h3>
 								<p class="publication-card__author text-block-reset">Мюллер-Брокманн...</p>
 								<p class="publication-card__price text-block-reset">1 450 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -825,11 +797,11 @@
 								<img class="publication-card__img" src="img/publications/6-mobile.jpg" alt="Эволюция графических стилей">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Эволюция графич...</h4>
+								<h3 class="publication-card__heading text-block-reset">Эволюция графич...</h3>
 								<p class="publication-card__author text-block-reset">Хеллер, Чваст</p>
 								<p class="publication-card__price text-block-reset">3 200 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -838,11 +810,11 @@
 								<img class="publication-card__img" src="img/publications/7-mobile.jpg" alt="Искусство и визуальное восприятие">
 							</picture>
 							<div class="publication-card__text-block">
-								<h4 class="publication-card__heading text-block-reset">Искусство и визуа...</h4>
+								<h3 class="publication-card__heading text-block-reset">Искусство и визуа...</h3>
 								<p class="publication-card__author text-block-reset">Арнхейм, Рудольф</p>
 								<p class="publication-card__price text-block-reset">2 200 руб</p>
 							</div>
-							<button class="publication-card__button link-reset">Заказать</button>
+							<button class="publication-card__button selectable link-reset">Заказать</button>
 						</div>
 					</div>
 				</div>
