publications hover, new artists

--- a/index.html
+++ b/index.html
@@ -388,30 +388,9 @@
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бенедетто ди Биндо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бергоньоне, Амброджо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Биссоло, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Больтраффио, Джованни</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бонсиньори, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Боттичини, Рафаэлло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Брамантино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бреа, Людовико</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бьяджо д’Антонио Туччи</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Веккьетта</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Андреа Верроккьо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Доменико Гирландайо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Беноццо Гоццоли</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Граначчи, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Грегорио ди Чекко</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни да Удине</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни ди Паоло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джорджоне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Парентино, Бернардо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пезеллино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пьетро Перуджино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Перуцци, Бальдассаре</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пизанелло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пинтуриккьо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="abbati">Джузеппе Аббати</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="induno">Джироламо Индуно</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="filippini">Франческо Филиппини</a></li>
 							</ul>
 						</div>
 						<div class="artists-catalog__subsection">
@@ -736,7 +715,9 @@
 								<p class="publication-card__author text-block-reset">Иттен, Иоханнес</p>
 								<p class="publication-card__price text-block-reset">620 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -749,7 +730,9 @@
 								<p class="publication-card__author text-block-reset">Рудер, Эмиль</p>
 								<p class="publication-card__price text-block-reset">2 450 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -762,7 +745,9 @@
 								<p class="publication-card__author text-block-reset">Гордон, Юрий</p>
 								<p class="publication-card__price text-block-reset">2 200 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -775,7 +760,9 @@
 								<p class="publication-card__author text-block-reset">Кричевский, Влади...</p>
 								<p class="publication-card__price text-block-reset">1 100 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -788,7 +775,9 @@
 								<p class="publication-card__author text-block-reset">Мюллер-Брокманн...</p>
 								<p class="publication-card__price text-block-reset">1 450 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -801,7 +790,9 @@
 								<p class="publication-card__author text-block-reset">Хеллер, Чваст</p>
 								<p class="publication-card__price text-block-reset">3 200 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 						<div class="swiper-slide publication-card">
 							<picture class="publication-card__picture">
@@ -814,7 +805,9 @@
 								<p class="publication-card__author text-block-reset">Арнхейм, Рудольф</p>
 								<p class="publication-card__price text-block-reset">2 200 руб</p>
 							</div>
-							<button class="publication-card__button selectable link-reset">Заказать</button>
+							<div class="publication-card__button-wrap">
+								<button class="publication-card__button link-reset">Заказать</button>
+							</div>
 						</div>
 					</div>
 				</div>
